fixing nominating section title shifting

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -408,6 +408,7 @@ td {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
+    justify-items: center;
 }
 
 .nominating h2 {
